--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body> 
     <div class="wrapper">
         <div class="header">
-            <span>Het eten van Jonathan</span>
-            <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Pornhub-logo.svg" alt="Johnny's Place logo">
+            <span>Snackbar Johnny's Place</span>
+            <img class="logo" src="img/logo-placeholder.jpg" alt="Johnny's Place logo">
         </div>
         
         <div class="content">
-            HIER KOMT DE CONTENT VOOR JONNA
+            SNACKBAR Johnny's Place
             
         </div>
         <div class="men">
@@ -23,8 +23,8 @@
         </div>
             Yeah
         <div class="footer">
-            Dit is the footer
-        </div>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda blanditiis rem architecto ut ducimus deleniti nemo consequatur. Tempore, cumque facilis ipsam blanditiis delectus ipsum harum adipisci voluptas inventore modi sint?        </div>
     </div>
 </body>
 </html>
+
