--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body> 
     <div class="wrapper">
         <div class="header">
-            <span>Snackbar Johnny's Place</span>
-            <img class="logo" src="img/logo-placeholder.jpg" alt="Johnny's Place logo">
+            <span>Welkom bij..</span>
+            <img class="logo" src="img/logo.png" alt="Johnny's Place logo">
         </div>
         
         <div class="content">
